--- a/conf/single_thread.ini
+++ b/conf/single_thread.ini
@@ -1,9 +1,13 @@
 [listen]
 port=12350
-backlog=5
+backlog=20
+
+[log]
+cfg_file=./conf/zlog.ini
 
 [concurrency]
 nworkers=1
 nepolls_per_worker=1
 nconn_per_epoll=500
 nthreads_per_epoll=1
+
